tests/errors/recursive-unification/main.pa
# Self-application forces an infinite (recursive) type.
def main = fun x { x x }
